--- a/exmp.ipynb
+++ b/exmp.ipynb
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -389,7 +389,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pat_cls = fcalc.classifier.PatternBinaryClassifier(X_train.values, y_train.to_numpy(), \n",
+    "pat_cls = fcalc.classifier.PatternClassifier(X_train.values, y_train.to_numpy(), \n",
     "                                             categorical=np.arange(X_train.shape[1]))"
    ]
   },
@@ -458,35 +458,27 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>5.7</td>\n",
-       "      <td>3.8</td>\n",
-       "      <td>1.7</td>\n",
-       "      <td>0.3</td>\n",
-       "      <td>True</td>\n",
+       "      <th>138</th>\n",
+       "      <td>6.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>4.8</td>\n",
+       "      <td>1.8</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>4.7</td>\n",
-       "      <td>3.2</td>\n",
+       "      <th>38</th>\n",
+       "      <td>4.4</td>\n",
+       "      <td>3.0</td>\n",
        "      <td>1.3</td>\n",
        "      <td>0.2</td>\n",
        "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>5.1</td>\n",
-       "      <td>3.3</td>\n",
-       "      <td>1.7</td>\n",
-       "      <td>0.5</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>52</th>\n",
-       "      <td>6.9</td>\n",
-       "      <td>3.1</td>\n",
-       "      <td>4.9</td>\n",
-       "      <td>1.5</td>\n",
+       "      <th>69</th>\n",
+       "      <td>5.6</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>3.9</td>\n",
+       "      <td>1.1</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -498,20 +490,20 @@
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>109</th>\n",
-       "      <td>7.2</td>\n",
+       "      <th>4</th>\n",
+       "      <td>5.0</td>\n",
        "      <td>3.6</td>\n",
-       "      <td>6.1</td>\n",
-       "      <td>2.5</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>4.8</td>\n",
-       "      <td>3.4</td>\n",
-       "      <td>1.9</td>\n",
+       "      <td>1.4</td>\n",
        "      <td>0.2</td>\n",
        "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>144</th>\n",
+       "      <td>6.7</td>\n",
+       "      <td>3.3</td>\n",
+       "      <td>5.7</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>44</th>\n",
@@ -522,20 +514,28 @@
        "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>32</th>\n",
-       "      <td>5.2</td>\n",
-       "      <td>4.1</td>\n",
-       "      <td>1.5</td>\n",
-       "      <td>0.1</td>\n",
+       "      <th>116</th>\n",
+       "      <td>6.5</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>5.5</td>\n",
+       "      <td>1.8</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>5.7</td>\n",
+       "      <td>3.8</td>\n",
+       "      <td>1.7</td>\n",
+       "      <td>0.3</td>\n",
        "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>5.4</td>\n",
-       "      <td>3.9</td>\n",
-       "      <td>1.3</td>\n",
-       "      <td>0.4</td>\n",
-       "      <td>True</td>\n",
+       "      <th>120</th>\n",
+       "      <td>6.9</td>\n",
+       "      <td>3.2</td>\n",
+       "      <td>5.7</td>\n",
+       "      <td>2.3</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -543,16 +543,16 @@
       ],
       "text/plain": [
        "     sepal_length  sepal_width  petal_length  petal_width  species\n",
-       "18            5.7          3.8           1.7          0.3     True\n",
-       "2             4.7          3.2           1.3          0.2     True\n",
-       "23            5.1          3.3           1.7          0.5     True\n",
-       "52            6.9          3.1           4.9          1.5    False\n",
+       "138           6.0          3.0           4.8          1.8    False\n",
+       "38            4.4          3.0           1.3          0.2     True\n",
+       "69            5.6          2.5           3.9          1.1    False\n",
        "122           7.7          2.8           6.7          2.0    False\n",
-       "109           7.2          3.6           6.1          2.5    False\n",
-       "24            4.8          3.4           1.9          0.2     True\n",
+       "4             5.0          3.6           1.4          0.2     True\n",
+       "144           6.7          3.3           5.7          2.5    False\n",
        "44            5.1          3.8           1.9          0.4     True\n",
-       "32            5.2          4.1           1.5          0.1     True\n",
-       "16            5.4          3.9           1.3          0.4     True"
+       "116           6.5          3.0           5.5          1.8    False\n",
+       "18            5.7          3.8           1.7          0.3     True\n",
+       "120           6.9          3.2           5.7          2.3    False"
       ]
      },
      "execution_count": 12,
@@ -583,7 +583,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pat_cls = fcalc.classifier.PatternBinaryClassifier(X_train.values, y_train.to_numpy())"
+    "pat_cls = fcalc.classifier.PatternClassifier(X_train.values, y_train.to_numpy())"
    ]
   },
   {
@@ -617,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -658,83 +658,83 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>191</th>\n",
-       "      <td>64.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>62</td>\n",
+       "      <th>31</th>\n",
+       "      <td>85.0</td>\n",
        "      <td>0</td>\n",
-       "      <td>60</td>\n",
+       "      <td>23</td>\n",
        "      <td>0</td>\n",
-       "      <td>309000.0</td>\n",
-       "      <td>1.5</td>\n",
-       "      <td>135</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>174</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>248</th>\n",
-       "      <td>40.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>624</td>\n",
-       "      <td>0</td>\n",
-       "      <td>35</td>\n",
-       "      <td>0</td>\n",
-       "      <td>301000.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>142</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>214</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>54</th>\n",
-       "      <td>60.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>260</td>\n",
-       "      <td>1</td>\n",
-       "      <td>38</td>\n",
-       "      <td>0</td>\n",
-       "      <td>255000.0</td>\n",
-       "      <td>2.2</td>\n",
-       "      <td>132</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
        "      <td>45</td>\n",
+       "      <td>0</td>\n",
+       "      <td>360000.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>132</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>28</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>107</th>\n",
-       "      <td>45.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1876</td>\n",
-       "      <td>1</td>\n",
-       "      <td>35</td>\n",
+       "      <th>139</th>\n",
+       "      <td>50.0</td>\n",
        "      <td>0</td>\n",
-       "      <td>226000.0</td>\n",
-       "      <td>0.9</td>\n",
+       "      <td>1548</td>\n",
+       "      <td>0</td>\n",
+       "      <td>30</td>\n",
+       "      <td>1</td>\n",
+       "      <td>211000.0</td>\n",
+       "      <td>0.8</td>\n",
        "      <td>138</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>88</td>\n",
+       "      <td>108</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>147</th>\n",
-       "      <td>64.0</td>\n",
+       "      <th>209</th>\n",
+       "      <td>49.0</td>\n",
        "      <td>0</td>\n",
-       "      <td>1610</td>\n",
-       "      <td>0</td>\n",
-       "      <td>60</td>\n",
-       "      <td>0</td>\n",
-       "      <td>242000.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>137</td>\n",
+       "      <td>972</td>\n",
        "      <td>1</td>\n",
+       "      <td>35</td>\n",
+       "      <td>1</td>\n",
+       "      <td>268000.0</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>130</td>\n",
        "      <td>0</td>\n",
-       "      <td>113</td>\n",
+       "      <td>0</td>\n",
+       "      <td>187</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>68</th>\n",
+       "      <td>70.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>161</td>\n",
+       "      <td>0</td>\n",
+       "      <td>25</td>\n",
+       "      <td>0</td>\n",
+       "      <td>244000.0</td>\n",
+       "      <td>1.2</td>\n",
+       "      <td>142</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>66</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>293</th>\n",
+       "      <td>63.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>103</td>\n",
+       "      <td>1</td>\n",
+       "      <td>35</td>\n",
+       "      <td>0</td>\n",
+       "      <td>179000.0</td>\n",
+       "      <td>0.9</td>\n",
+       "      <td>136</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>270</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -743,28 +743,28 @@
       ],
       "text/plain": [
        "      age  anaemia  creatinine_phosphokinase  diabetes  ejection_fraction  \\\n",
-       "191  64.0        1                        62         0                 60   \n",
-       "248  40.0        0                       624         0                 35   \n",
-       "54   60.0        1                       260         1                 38   \n",
-       "107  45.0        1                      1876         1                 35   \n",
-       "147  64.0        0                      1610         0                 60   \n",
+       "31   85.0        0                        23         0                 45   \n",
+       "139  50.0        0                      1548         0                 30   \n",
+       "209  49.0        0                       972         1                 35   \n",
+       "68   70.0        0                       161         0                 25   \n",
+       "293  63.0        1                       103         1                 35   \n",
        "\n",
        "     high_blood_pressure  platelets  serum_creatinine  serum_sodium  sex  \\\n",
-       "191                    0   309000.0               1.5           135    0   \n",
-       "248                    0   301000.0               1.0           142    1   \n",
-       "54                     0   255000.0               2.2           132    0   \n",
-       "107                    0   226000.0               0.9           138    1   \n",
-       "147                    0   242000.0               1.0           137    1   \n",
+       "31                     0   360000.0               3.0           132    1   \n",
+       "139                    1   211000.0               0.8           138    1   \n",
+       "209                    1   268000.0               0.8           130    0   \n",
+       "68                     0   244000.0               1.2           142    0   \n",
+       "293                    0   179000.0               0.9           136    1   \n",
        "\n",
        "     smoking  time  DEATH_EVENT  \n",
-       "191        0   174            0  \n",
-       "248        1   214            0  \n",
-       "54         1    45            1  \n",
-       "107        0    88            0  \n",
-       "147        0   113            0  "
+       "31         0    28            1  \n",
+       "139        0   108            0  \n",
+       "209        0   187            0  \n",
+       "68         0    66            1  \n",
+       "293        1   270            0  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -776,7 +776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -787,17 +787,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pat_cls = fcalc.classifier.PatternBinaryClassifier(X_train.values, y_train.to_numpy(), \n",
-    "                                                   categorical=np.array([1,3,5,9,10]))"
+    "pat_cls = fcalc.classifier.PatternClassifier(X_train.values, y_train.to_numpy(), \n",
+    "                                                   categorical=np.array([1,3,5,9,10]),\n",
+    "                                                   method=\"ratio-support\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -806,15 +807,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "accuracy: 0.6778\n",
-      "f1 score: 0.4268\n"
+      "accuracy: 0.7333\n",
+      "f1 score: 0.7129\n"
      ]
     }
    ],
@@ -826,10 +827,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0., 0., 0., 1., 0., 0., 1., 0., 1., 1., 0., 1., 0., 0., 0., 0., 0.,\n",
+       "       0., 0., 0., 1., 0., 0., 1., 0., 0., 0., 0., 0., 0., 1., 0., 1., 1.,\n",
+       "       1., 1., 0., 0., 0., 0., 1., 1., 0., 0., 0., 0., 1., 0., 0., 0., 1.,\n",
+       "       0., 0., 0., 0., 1., 0., 1., 0., 1., 1., 1., 1., 0., 1., 0., 0., 1.,\n",
+       "       0., 0., 0., 0., 0., 0., 0., 0., 0., 1., 0., 1., 1., 0., 1., 0., 0.,\n",
+       "       0., 0., 0., 1., 0.])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pat_cls.predictions"
+   ]
   }
  ],
  "metadata": {
